<resources>
    <string name="app_name">GithubUser</string>
    <string name="searchbar_hint">Masukkan kata</string>
    <string name="user_name">username</string>
    <string name="name"></string>
    <string name="angka_1"></string>
    <string name="angka_2"></string>
    <string name="tv_followers">followers</string>
    <string name="tv_following">following</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="content_tab_text1">Change your followers</string>
    <string name="content_tab_text2">Change your following</string>
    <string name="dark_mode">Dark Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follow">follow</string>
</resources>